--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/kosugi-maru": "^0.2.3",
     "@expo-google-fonts/lato": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.10",
     "expo-font": "~11.1.1",
