--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,10 @@ npm-debug.*
 *.orig.*
 web-build/
 
+firebase-config.js
+
 # macOS
 .DS_Store
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
-firebase-config.js/
